tdf#126309 RTF import: fix not needed para adjust swap for bidi text

Regression from commit 4ee2a882dddb395a816cd54004b634d57cfb2446
(tdf#86182 RTF import: fix handling of \rtlpar, 2015-04-17), now that we
don't ignore \rtlpar, it turned out that dmapper should not do paragraph
alignment left/right swapping for RTF.

It seems this is needed for DOCX, but not for legacy DOC/RTF.

See how SwWW8ImplReader::Read_Justify() doesn't do this, either, so this
is one of those rare cases when dmapper has to know if the token stream
is generated by the DOCX or the RTF tokenizers.

Change-Id: Ibd52e3dc9e782e1d985418085b82b2e2628bc1dd